Bug 428135, form submission event shouldn't bubble to parent forms, r=jst,sr=sicking,a=beltzner